fix nav on mobile and remove serif fonts

--- a/_sass/breakpoints/_800up.scss
+++ b/_sass/breakpoints/_800up.scss
@@ -59,7 +59,7 @@ HEADER STYLING
 ***************/
 
 .header {
-	height: 15em;
+	height: 20em;
 	position: relative;
 	padding-bottom: 2em;
 
@@ -123,30 +123,6 @@ HEADER STYLING
 	}
 }
 
-
-/***************
-MENU STYLING
-***************/
-
-.js {
-
-	.nav-collapse {
-		position: relative;
-		max-height: none;
-
-		&.closed {
-			max-height: none;
-		}
-
-		ul li a {
-			display: inline-block;
-		}
-	}
-}
-
-.nav-toggle {
-	display: none;
-}
 
 
 /***************
