--- a/_sass/breakpoints/_mobileup.scss
+++ b/_sass/breakpoints/_mobileup.scss
@@ -186,17 +186,21 @@ HEADER STYLING
 	background-position: center center;
 	color: white;
 	padding: 0;
-	height: 3em;
+	height: 8em;
 
 	.container {
 		padding: 0;
 		max-width: 100%;
-	}
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+		overflow: hidden;
+	  	padding-left: 2rem;
+  	}
 
 	h1 {
 		margin: 0;
 		float: left;
-		padding-left: 2rem;
 		font-size: 1em;
 		line-height: 3em;
 		font-family: $sans-serif;
@@ -208,6 +212,64 @@ HEADER STYLING
 			text-decoration: none;
 		}
 	}
+
+	nav {
+	  float: left;
+	  clear: left;
+
+	  ul {
+		margin: 0;
+
+		li {
+		  display: inline;
+		  line-height: 3em;
+		  background: none;
+		  padding: 0 5px;
+		  border: none;
+
+		  a {
+			color: white;
+			font-size: .9em;
+			text-decoration: none;
+			padding: 0 .25em;
+
+			&:hover {
+			  color: darken(white, 20%);
+			}
+		  }
+
+		  &.current {
+			padding-bottom: .25em;
+			border-bottom: 4px solid rgba(255, 255, 255, .4);
+		  }
+		}
+	  }
+	}
+}
+
+
+/***************
+MENU STYLING
+***************/
+
+.js {
+
+  .nav-collapse {
+	position: relative;
+	max-height: none;
+
+	&.closed {
+	  max-height: none;
+	}
+
+	ul li a {
+	  display: inline-block;
+	}
+  }
+}
+
+.nav-toggle {
+  display: none;
 }
 
 /***************
